terraform/aws/main.tf
provider "aws" {
  region = var.region
}

# Setup VPC for Cognit Deployment
resource "aws_vpc" "opsforge" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true

  tags = {
    Name = "opsforge"
  }
}

# Create Internet Gateway
resource "aws_internet_gateway" "opsforge" {
  vpc_id = aws_vpc.opsforge.id

  tags = {
    Name = "opsforge"
  }
}

# Create Route Table
resource "aws_route_table" "opsforge" {
  vpc_id = aws_vpc.opsforge.id

  tags = {
    Name = "opsforge"
  }
}

# Create Route for Internet Traffic
resource "aws_route" "internet_route" {
  route_table_id         = aws_route_table.opsforge.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.opsforge.id
}

# Setup Subnet for EC2 Instances
resource "aws_subnet" "cognit" {
  vpc_id     = aws_vpc.opsforge.id
  cidr_block = "10.0.1.0/24"
}

# Associate Route Table with Subnet
resource "aws_route_table_association" "opsforge" {
  subnet_id      = aws_subnet.cognit.id
  route_table_id = aws_route_table.opsforge.id
}

# Retrieve Ubuntu 22.04 LTS AMI
data "aws_ssm_parameter" "ubuntu" {
  name = "/aws/service/canonical/ubuntu/server/22.04/stable/current/amd64/hvm/ebs-gp2/ami-id"
}




<<<<<<< Updated upstream
=======
# Create AI Orchestrator EC2 Instance

resource "aws_instance" "ai" {
  tags = {
    Name = "cognit-AI_Orchestrator"
  }
  instance_type = var.aws_instance_type
  ami           = data.aws_ssm_parameter.ubuntu.value
  root_block_device {
    volume_size = var.aws_volume_size
  }
  subnet_id                   = aws_subnet.cognit.id
  key_name                    = var.aws_ssh_key
  vpc_security_group_ids      = [aws_security_group.engine.id]
  associate_public_ip_address = true
  connection {
    type        = "ssh"
    user        = var.ssh_user
    private_key = file(var.aws_ssh_key_path)
    host        = self.public_dns
  }
}

# Security Group for Frontend
resource "aws_security_group" "frontend" {
  vpc_id = aws_vpc.opsforge.id
>>>>>>> Stashed changes
